# lidr-Master-ai-engineering

./: .env.example  .gitignore  GUARDRAIL_FIX_SUMMARY.md  README.md  START_HERE.sh  arquitectura-actual.md  docker-compose.yml  ecs-trust-policy.json  regulatory-corpus-adapted-spec.md  run-regression.ps1
ai-engine/: .dockerignore  Dockerfile  README.md  TURN_OBSERVED_GUIDE.md  alembic.ini  output_examples.txt  pyproject.toml  query_examples.py  requirements.txt  streamlit_app.py
ai-engine/.deepeval/: .deepeval_telemetry.txt
ai-engine/alembic/: env.py
ai-engine/alembic/versions/: 0001_initial_schema.py  0002_add_chunks_content_tsvector.py
ai-engine/app/: config.py  dependencies.py  main.py  worker.py
ai-engine/app/api/: __init__.py  cache_metrics.py  config.py  embeddings.py  estimations.py  ingestion.py  internal.py  rag_pipeline.py  search.py  sessions.py
ai-engine/app/cache/: semantic.py
ai-engine/app/domain/: __init__.py  estimation_renderer.py  estimation_service.py  output_validator.py
ai-engine/app/embedding_pipeline/: EMBEDDER.md  SANITY_CHECK.md  __init__.py  chunker.py  embedder.py  router.py  schemas.py
ai-engine/app/fixtures/: guardrail_test_injection_ignore.txt  guardrail_test_injection_new_instructions.txt  guardrail_test_injection_xml_tags.txt  guardrail_test_injection_you_are_now.txt  guardrail_test_pii_email.txt  guardrail_test_pii_iban.txt  guardrail_test_pii_phone.txt
ai-engine/app/foundation/: __init__.py
ai-engine/app/generation/: __init__.py
ai-engine/app/guardrails/: ouput.py
ai-engine/app/ingestion/: __init__.py  orchestrator.py
ai-engine/app/persistence/: __init__.py  database.py  models.py
ai-engine/app/prompts/: loader.py
ai-engine/app/routers/: cache_metrics.py  estimations.py  ingestion.py  internal.py  sessions.py
ai-engine/app/schemas/: estimation.py  observation.py  session.py
ai-engine/app/services/: acb_service.py  attachment_service.py  cache_service.py  estimation_renderer.py  estimation_service.py  litellm_service.py  metadata_extractor.py  session_estimation_service.py  sessions.py  summarizer_service.py
ai-engine/data/catalog/: catalog.yaml
ai-engine/data/seed/: rate_card_2024.xlsx
ai-engine/evals/: METRICS.md  README.md  __init__.py  metrics_example.py  run.py
ai-engine/evals/stress/: README.md  USAGE.md  gen_report.py  run.py  run.sh  run_full.sh  runner.py  scenarios.py
ai-engine/scripts/: benchmark_embeddings.py  compare.py  compare_pairs.py  demo_cleaning_s06.py  demo_pii_s06.py  eval_hybrid_rerank.py  eval_ragas_generation.py  ingest_budgets_batch.py  inspect_embedding.py  preflight_s06.py  query_examples.py
ai-engine/tests/: conftest.py
ai-engine/tests/eval/: golden_dataset.py  test_acb_quality.py  test_llm_judge.py  test_soft_determinism.py
ai-engine/tests/evals/: README.md  USAGE.sh  deterministic_metrics.py  deterministic_metrics_quickstart.py  eval_runner.py  golden_dataset.py  hybrid_rerank_golden_set.json  ragas_generation_golden_set.json  test_acb_quality.py  test_llm_judge.py  test_soft_determinism.py
ai-engine/tests/integration/: test_acb_estimations.py  test_chunking_compare_router.py  test_config_router.py  test_estimations.py  test_ingestion_router.py  test_litellm_estimations.py  test_metrics_integration.py  test_public_search_router.py  test_rag_pipeline_integration.py  test_sessions.py
ai-engine/tests/stress/: README.md  REPORT.md  USAGE.md  __init__.py  example_results.csv  report_generator.py  results.csv  run.py  run_expanded.py  run_expanded.sh  run_full.sh  runner.py  scenarios.py
ai-engine/tests/unit/: test_acb_service.py  test_cache_service.py  test_catalog_models.py  test_citation_validator_service.py  test_coherence_repair_service.py  test_dependencies.py  test_embedding_chunker.py  test_embedding_embedder.py  test_embedding_pipeline_schemas.py  test_embedding_router.py  test_embeddings_ingest_persistence.py  test_embeddings_search.py  test_estimation_result.py  test_estimation_service_guardrails.py  test_estimations_router_cache.py  test_eval_ragas_generation.py  test_example_fixture.py  test_examples.py  test_hybrid_retrieval.py  test_ingestion_orchestrator.py  test_input_guardrails.py  test_internal_router.py  test_litellm_service.py  test_metadata_extractor.py  test_metrics.py  test_output_format.py  test_output_guardrails.py  test_output_validator.py  test_persistence_pgvector_contract.py  test_persistence_repositories.py  test_pii_pseudonymizer.py  test_prompt_loader.py  test_rag_chunking_comparison.py  test_rate_card_xlsx_parser.py  test_reformulation_service.py  test_runtime_model_config.py  test_scripts_s06.py  test_semantic_cache.py  test_sessions.py  test_sessions_router_cache.py  (+2 more)
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  database.py
backend/app/models/: base.py  project.py  user.py
backend/app/routers/: auth.py  estimations.py  internal.py
backend/app/schemas/: __init__.py  estimation.py  project.py  (+1 more)
backend/tests/: conftest.py
estimator-cag/: .dockerignore  .env.example  Dockerfile  README.md  debug_regex.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  streamlit_app.py
estimator-cag/app/: config.py  logging.py  main.py
estimator-cag/tests/: conftest.py
(+357 files in other folders)
