[project]
name = "estimator-artificial-intelligence"
version = "1.1.0"
description = "Cost estimation service for CAG workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.97.0",
    "arq>=0.25.0",
    "click>=8.1.0",
    "fastapi>=0.136.1",
    "httpx>=0.27.0",
    "instructor>=1.0.0",
    "litellm>=1.40.0",
    "openai>=2.32.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.9",
    "redis[asyncio]>=7.4.0",
    "redisvl>=0.3.0",
    "python-jose[cryptography]>=3.3.0",
    "streamlit>=1.45.0",
    "structlog>=25.5.0",
    "tiktoken>=0.12.0",
    "uvicorn>=0.46.0",
    "deepeval>=4.0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=7.1.0",
    "deepeval>=2.0.0",
]

[project.scripts]
evals = "evals.run:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow — multiple LLM calls per case (deselect with '-m \"not slow\"')",
    "llm_live: marks tests that make real LLM API calls (requires valid API keys in env)",
]
