[project]
name = "estimator-artificial-intelligence"
version = "1.1.0"
description = "Cost estimation service for CAG workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.97.0",
    "arq>=0.25.0",
    "click>=8.1.0",
    "fastapi>=0.136.1",
    "httpx>=0.27.0",
    "instructor>=1.0.0",
    "litellm>=1.40.0",
    "openai>=2.32.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pandera>=0.26.1",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0.2",
    "faker>=37.5.3",
    # Presidio >=2.2.360 is not currently published for Python 3.14.
    "presidio-analyzer>=2.2.360; python_version < '3.14'",
    "presidio-analyzer==2.2.359; python_version >= '3.14'",
    "presidio-anonymizer>=2.2.360; python_version < '3.14'",
    "presidio-anonymizer==2.2.359; python_version >= '3.14'",
    "spacy>=3.8.7",
    "redis[asyncio]>=7.4.0",
    "redisvl>=0.3.0",
    "sqlalchemy>=2.0.43",
    "psycopg[binary]>=3.2.10",
    "python-jose[cryptography]>=3.3.0",
    "streamlit>=1.45.0",
    "structlog>=25.5.0",
    "tiktoken>=0.12.0",
    "uvicorn>=0.46.0",
    "deepeval>=4.0.3",
    "sentence-transformers>=5.5.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=7.1.0",
    "deepeval>=2.0.0",
]

[project.scripts]
evals = "evals.run:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow — multiple LLM calls per case (deselect with '-m \"not slow\"')",
    "llm_live: marks tests that make real LLM API calls (requires valid API keys in env)",
]
