[project]
name = "estimator-cag"
version = "0.1.0"
description = "Cost estimation service for CAG workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "openai>=2.32.0",
    "pydantic-settings>=2.14.0",
    "tiktoken>=0.12.0",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
